# knot

./: .env.bak  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh
.claude/plans/: v023-eval-fewshot-feedback.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval-live.yml
bi_agent/: dependencies.py  engine_cache.py  main.py  schemas.py
bi_agent/adapters/: __init__.py
bi_agent/api/: __init__.py  _audit_helpers.py  _secret.py  admin.py  audit.py  auth.py  catalog.py  conversations.py  database.py  deps.py  exports.py  few_shots.py  knowledge.py  prompts.py  query.py  saved_reports.py  schemas.py  templates.py  uploads.py
bi_agent/config/: __init__.py  pricing.py  settings.py
bi_agent/core/: auth_utils.py  catalog_loader.py  config.py  date_context.py  db_connector.py  doc_rag.py  few_shots.example.yaml  few_shots.yaml  llm_client.py  logging_setup.py  multi_agent.py  ohx_catalog.py  persistence.py  prompts.py  rag_retriever.py  schema_filter.py  sql_agent.py
bi_agent/models/: __init__.py  agent.py  audit.py  budget.py  catalog.py  conversation.py  data_source.py  errors.py  few_shot.py  knowledge.py  llm.py  prompt.py  saved_report.py  setting.py  user.py
bi_agent/repositories/: __init__.py  audit_repo.py  base.py  budget_repo.py  conversation_repo.py  data_source_repo.py  few_shot_repo.py  knowledge_repo.py  message_repo.py  prompt_repo.py  saved_report_repo.py  schema.sql  settings_repo.py  upload_repo.py  user_repo.py
bi_agent/routers/: admin.py  auth.py  catalog.py  conversations.py  database.py  few_shots.py  knowledge.py  prompts.py  query.py  templates.py  uploads.py  user.py
bi_agent/scripts/: migrate_encrypt_v045.py  purge_audit_log.py
bi_agent/services/: __init__.py  audit_service.py  budget_service.py  cost_service.py  (+7 more)
docs/: ADMIN_GUIDE.md  ANALYST_GUIDE.md  ONBOARDING.md  PRIVACY.md  SLA.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
knot/: main.py
scripts/: README.md  audit_ohx_leakage.py  check_file_sizes.py  check_phase_b_leakage.py  deploy_checklist.sh  profile_pyspy.sh  seed_v021_b3.py
tests/: _route_count.py  conftest.py  test_contracts_renamed.py  test_core_purity.py  test_cors_env.py  test_deploy_md_exists.py  test_doc_invariants.py  test_env_dual_source.py  test_foundation_additive.py  test_frontend_2fa_contract.py  test_isolation_hardening.py  test_login_version_sync.py  test_rename_smoke.py  test_startup_master_key.py  test_v060_9_hardening.py  test_v0_6_2_2_composite_metric.py
(+641 files in other folders)
