[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-agent"
version = "0.3.0"
description = "BI-Agent — natural-language SQL/chart assistant (KNOT)"
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.setuptools.packages.find]
include = ["bi_agent*"]
exclude = ["tests*", "frontend*"]

# ── Ruff ──
[tool.ruff]
line-length = 110
target-version = "py39"
extend-exclude = ["bi_agent/static", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = ["E501", "PLR0913", "PLR2004", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "F401"]
"bi_agent/core/_*_shim.py" = ["F401", "F403"]
"bi_agent/core/persistence.py" = ["F401", "F403"]

# ── pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
